--- a/css/blogTag.css
+++ b/css/blogTag.css
@@ -19,8 +19,9 @@ section.topArticles {
 }
 
 section.topArticles h1.title {
+	text-align: left;
 	text-transform: uppercase;
 	font-size: 30px;
-	padding-bottom: 10px;
+	padding: 30px 0 10px;
 	color: rgba(0,0,0,0.5);
 }
